--- a/DoorLockSystem/res/values/strings.xml
+++ b/DoorLockSystem/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="logoDesc">Logo for Main Menu</string>
+    <string name="title_activity_lock_unlock">LockUnlockActivity</string>
 
 </resources>
